syntax = "proto3";
package types;

option go_package = "github.com/canopy-network/canopy/fsm";

import "google/protobuf/any.proto";
import "certificate.proto";

// *****************************************************************************************************
// This file is auto-generated from source files in `/lib/.proto/*` using Protocol Buffers (protobuf)
//
// Protobuf is a language-neutral, platform-neutral serialization format. It allows users
// to define objects in a way thatâ€™s both efficient to store and fast to transmit over the network.
// These definitions are compiled into code that *enables different systems and programming languages
// to communicate in a byte-perfect manner*
//
// To update these structures, make changes to the source .proto files, then recompile
// to regenerate this file.
// These auto-generated files are easily recognized by checking for a `.pb.go` ending
// *****************************************************************************************************
//_
//_
//_
// MessageSend is a standard transfer transaction, taking tokens from the sender and transferring
// them to the recipient
message MessageSend {
  // from_address: is the sender of the funds
  bytes from_address = 1; // @gotags: json:"fromAddress"
  // to_address: is the recipient of the funds
  bytes to_address = 2; // @gotags: json:"toAddress"
  // amount: is the amount of tokens in micro-denomination (uCNPY)
  uint64 amount = 3;
}

// MessageCreateOrder creates a new token swap 'sell order', removing tokens from the sender
// account and transferring them to an escrow pool while awaiting a buyer
message MessageCreateOrder {
  // chain_id: the id of the committee that is responsible for the 'counter asset' the uCNPY will swapped for
  uint64 ChainId = 1; // @gotags: json:"chainID"
  // data: a generic data field which can allow a committee to execute specific functionality for the swap
  bytes data = 2; // @gotags: json:"data"
  // amount_for_sale: the amount of uCNPY listed for sale, transferred to escrow
  uint64 AmountForSale = 3; // @gotags: json:"amountForSale"
  // requested_amount: the amount of the 'counter asset' the buyer must send in order to complete a swap
  uint64 RequestedAmount = 4; // @gotags: json:"requestAmount"
  // sellers_receive_address: the address of the seller where the 'counter asset' will be received
  bytes SellerReceiveAddress = 5; // @gotags: json:"sellerReceiveAddress"
  // sellers_send_address: the Canopy address the seller is selling and signing from
  bytes SellersSendAddress = 6; // @gotags: json:"sellersSendAddress"
  // OrderId: auto-populated by the state machine to assign the unique bytes to the order
  bytes OrderId = 7;
}

// MessageEditOrder modifies an un-claimed token swap 'sell order', token amount may be increased or decreased as well
// as the recipient address
// If an order is already 'claimed' or 'bought', the order may not be modified
message MessageEditOrder {
  // order_id: is the number id that is unique to this committee to identify the order
  // not modifiable, used for order identification only
  bytes OrderId = 1; // @gotags: json:"orderID"
  // chain_id: the id of the committee that is responsible for the 'counter asset' the uCNPY will swapped for
  // not modifiable, used for order identification only
  uint64 ChainId = 2; // @gotags: json:"chainID"
  // data: a generic data field which can allow a committee to execute specific functionality for the swap
  bytes data = 3; // @gotags: json:"data"
  // amount_for_sale: the updated amount of uCNPY listed for sale, a reduction will return escrowed tokens to the seller's
  // send address
  uint64 AmountForSale = 4; // @gotags: json:"amountForSale"
  // requested_amount: the updated amount of the 'counter asset' the buyer must send in order to complete a swap
  uint64 RequestedAmount = 5; // @gotags: json:"requestedAmount"
  // sellers_receive_address: the address of the seller where the 'counter asset' will be received
  bytes SellerReceiveAddress = 6; // @gotags: json:"sellerReceiveAddress"
}

// MessageDeleteOrder: deletes an un-claimed token swap 'sell order'
// If an order is already 'claimed' or 'bought', the order may not be deleted
message MessageDeleteOrder {
  // order_id: is the number id that is unique to this committee to identify the order
  bytes OrderId = 1; // @gotags: json:"orderID"
  // chain_id: the id of the committee that is responsible for the 'counter asset' the uCNPY will swapped for
  uint64 ChainId = 2; // @gotags: json:"chainID"
}
